copy from repo MyWeb

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <aside>
         <article id="profile" class="profile card-profile">
           <header>
-            <h2>My Profile</h2>
+            <h2>MyProfile</h2>
             <div class="container-photo">
               <img src="./assets/image/me2.jpg" />
             </div>
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="https://github.com/mochamadiskandar" target="blank"
-                    ><img src="./assets/image/github.png" alt=""
+                    ><img src="./assets/image/git.svg" alt=""
                   /></a>
                 </li>
                 <li>
@@ -85,43 +85,43 @@
             <table class="table-biodata">
               <tr>
                 <td class="label">Name</td>
-                <td>: Mochamad Iskandar</td>
+                <td>Mochamad Iskandar</td>
               </tr>
               <tr>
                 <td class="label">Birthdate</td>
-                <td>: 30 June 1991</td>
+                <td>30 June 1991</td>
               </tr>
               <tr>
                 <td class="label">Phone</td>
-                <td>: 081289565274</td>
+                <td>081289565274</td>
               </tr>
               <tr>
                 <td class="label">Email</td>
-                <td>: mochamadiskandar19@gmail.com</td>
+                <td>mochamadiskandar19@gmail.com</td>
               </tr>
               <tr>
                 <td class="label">Address</td>
-                <td>: Pondok Kelapa, Jakarta Timur</td>
+                <td>Pondok Kelapa, Jakarta Timur</td>
               </tr>
               <tr>
                 <td class="label">Status</td>
-                <td>: Married</td>
+                <td>Married</td>
               </tr>
               <tr>
                 <td class="label">Religion</td>
-                <td>: Moslem</td>
+                <td>Moslem</td>
               </tr>
               <tr>
                 <td class="label">Hobby</td>
-                <td>: Futsal & Readding</td>
+                <td>Futsal & Readding</td>
               </tr>
             </table>
           </section>
         </article>
       </aside>
-      <div id="content">
+      <div id="aside-skills">
         <article id="skills" class="card-skills">
-          <h2>My Skills</h2>
+          <h2>MySkills</h2>
           <!-- My Skills -->
           <table class="table-container">
             <tr>
@@ -129,13 +129,13 @@
                 <div class="content-skill">
                   <ul>
                     <li>
-                      HTML - CSS - Javascript
+                      HTML - CSS
                       <div class="level" style="width: 80%;">
                         80%
                       </div>
                     </li>
                     <li>
-                      Java
+                      Java - Javascript - ES6
                       <div class="level" style="width: 75%;">
                         75%
                       </div>
@@ -176,7 +176,7 @@
 
       <div id="contentfull">
         <article id="experience" class="card">
-          <h2>My Experience</h2>
+          <h2>MyExperience</h2>
           <table class="table">
             <tr>
               <th>Experience</th>
@@ -186,33 +186,33 @@
             <tr>
               <td>Photon Interactive</td>
               <td>Software Engineer</td>
-              <td>December 2019 - Present</td>
+              <td>Dec 2019 - Present</td>
             </tr>
             <tr>
               <td>PT Radiant Utama Tbk</td>
               <td>Staff Operation</td>
-              <td>January 2017 - December 2019</td>
+              <td>Jan 2017 - Dec 2019</td>
             </tr>
             <tr>
               <td>PT Bank Central Asia Tbk</td>
               <td>Teller Officer</td>
-              <td>April 2016 - January 2017</td>
+              <td>Apr 2016 - Jan 2017</td>
             </tr>
             <tr>
               <td>PT MNC Sky Vision Tbk</td>
               <td>Staff Administrative</td>
-              <td>April 2013 - March 2016</td>
+              <td>Apr 2013 - Mar 2016</td>
             </tr>
             <tr>
               <td>Dunkin Donuts Indonesia</td>
               <td>Store Manager</td>
-              <td>April 2010 - March 2013</td>
+              <td>Apr 2010 - Mar 2013</td>
             </tr>
           </table>
         </article>
 
         <article id="education" class="card">
-          <h2>My Education</h2>
+          <h2>MyEducation</h2>
           <table class="table">
             <tr>
               <th>No</th>
@@ -252,58 +252,85 @@
         </article>
 
         <article id="training" class="card">
-          <br />
-          <h2>Training</h2>
+          <h2>MyTraining</h2>
           <table class="table">
             <tr>
-              <th>Intitute</th>
+              <th>Institute</th>
               <th>Course</th>
               <th>Training Period</th>
+              <th>Status</th>
             </tr>
 
             <tr>
               <td>BuildWithAngga</td>
-              <td>Full Stack React Native Developer (on process)</td>
+              <td class="course">
+                Full Stack React Native Developer (on process)
+              </td>
               <td>May 2020</td>
+              <td>on process</td>
             </tr>
+
+            <tr>
+              <td>Dicoding Indonesia</td>
+              <td class="course">Start programming with Java</td>
+              <td>-</td>
+              <td>on process</td>
+            </tr>
+
+            <tr>
+              <td>Dicoding Indonesia</td>
+              <td class="course">SCM for Beginner</td>
+              <td>Feb 2020</td>
+              <td>complete</td>
+            </tr>
+
             <tr>
               <td>Digitalent Kominfo</td>
-              <td>Online Academy - Android</td>
-              <td>November 2019</td>
+              <td class="course">Online Academy - Android</td>
+              <td>Nov 2019</td>
+              <td>complete</td>
             </tr>
 
             <tr>
               <td>Dicoding Indonesia</td>
-              <td>Learn to make an Android Apps for beginners</td>
-              <td>August 2019</td>
+              <td class="course">
+                Learn to make an Android Apps for beginners
+              </td>
+              <td>Aug 2019</td>
+              <td>complete</td>
             </tr>
 
             <tr>
               <td>Dicoding Indonesia</td>
-              <td>Start programming with Kotlin</td>
-              <td>October 2019</td>
+              <td class="course">Start programming with Kotlin</td>
+              <td>Oct 2019</td>
+              <td>complete</td>
             </tr>
 
             <tr>
               <td>Solo Learn</td>
-              <td>HTML Fundamentals</td>
-              <td>June 2019</td>
+              <td class="course">HTML Fundamentals</td>
+              <td>Jun 2019</td>
+              <td>complete</td>
             </tr>
 
             <tr>
               <td>EC Council</td>
-              <td>Certified Secure Computer User</td>
+              <td class="course">Certified Secure Computer User</td>
               <td>May 2018</td>
+              <td>complete</td>
             </tr>
             <tr>
               <td>BCA E-Learning</td>
-              <td>Anti Fraud Awareness</td>
-              <td>September 2016</td>
+              <td class="course">Anti Fraud Awareness</td>
+              <td>Sept 2016</td>
+              <td>complete</td>
             </tr>
             <tr>
               <td>BCA E-Learning</td>
-              <td>Kaizen</td>
-              <td>September 2016</td>
+              <td class="course">Kaizen</td>
+              <td>Sept 2016</td>
+              <td>complete</td>
             </tr>
           </table>
         </article>
@@ -373,7 +400,15 @@
       </div>
     </main>
     <footer>
-      <p>My Portofolio &copy; 2019, Mochamad Iskandar</p>
+      <p>
+        &copy; 2019 by Mochamad Iskandar | All right reserved
+      </p>
     </footer>
   </body>
 </html>
+
+<!-- max 600 - extra small devices (phone 600px and down)
+min 601 - small devices(portrait tablets and large phones 600px and up)
+min 768 - medium devices(landscape tablets, 768px and up)
+min 992 - large devices (laptop, 992px and up)
+min 1200px extra large devices (large laptop and desktop , 1200px and up) -->
