copy from repo myweb

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
                 <td>Futsal & Readding</td>
               </tr>
             </table>
+            <div class="download">
+              <a
+                href="https://drive.google.com/open?id=1FOz4WiJwDWmpavEZLEzmbJGKonF10aS3"
+              >
+                <button class="button button-download">
+                  DOWNLOAD CV
+                </button>
+              </a>
+            </div>
           </section>
         </article>
       </aside>
@@ -380,23 +389,6 @@
             </tr>
           </table>
         </article>
-
-        <article id="download" class="card-download">
-          <table class="table-download">
-            <tr>
-              <td>
-                You can download my CV in here :
-              </td>
-              <td>
-                <a
-                  href="https://drive.google.com/open?id=1FOz4WiJwDWmpavEZLEzmbJGKonF10aS3"
-                >
-                  <img src="./assets/image/download.png" />
-                </a>
-              </td>
-            </tr>
-          </table>
-        </article>
       </div>
     </main>
     <footer>
@@ -406,9 +398,3 @@
     </footer>
   </body>
 </html>
-
-<!-- max 600 - extra small devices (phone 600px and down)
-min 601 - small devices(portrait tablets and large phones 600px and up)
-min 768 - medium devices(landscape tablets, 768px and up)
-min 992 - large devices (laptop, 992px and up)
-min 1200px extra large devices (large laptop and desktop , 1200px and up) -->
