--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
               </tr>
               <tr>
                 <td class="label">Hobby</td>
-                <td>Futsal & Readding</td>
+                <td>Futsal</td>
               </tr>
             </table>
             <div class="download">
               <a
-                href="https://drive.google.com/open?id=1FOz4WiJwDWmpavEZLEzmbJGKonF10aS3"
+                href="https://drive.google.com/open?id=1cua7erRbDjqVQ0nN93sd3Y_7NhluYSQq"
               >
                 <button class="button button-download">
                   DOWNLOAD CV
@@ -281,13 +281,6 @@
 
             <tr>
               <td>Dicoding Indonesia</td>
-              <td class="course">Start programming with Java</td>
-              <td>-</td>
-              <td>on process</td>
-            </tr>
-
-            <tr>
-              <td>Dicoding Indonesia</td>
               <td class="course">SCM for Beginner</td>
               <td>Feb 2020</td>
               <td>complete</td>
@@ -311,8 +304,15 @@
 
             <tr>
               <td>Dicoding Indonesia</td>
-              <td class="course">Start programming with Kotlin</td>
+              <td class="course">Start programming with Java</td>
               <td>Oct 2019</td>
+              <td>complete</td>
+            </tr>
+
+            <tr>
+              <td>Dicoding Indonesia</td>
+              <td class="course">Learn Basic Web Programming</td>
+              <td>Aug 2019</td>
               <td>complete</td>
             </tr>
 
