copy from repo myweb - media screen for mobile

--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
                 </li>
                 <li>
                   <a
-                    href="https://www.instagram.com/mo_iskandar30/?hl=id"
+                    href="https://www.linkedin.com/in/mois-300691/"
                     target="blank"
-                    ><img src="./assets/image/ig.jpg" alt=""
+                    ><img src="./assets/image/linkedin-black.png" alt=""
                   /></a>
                 </li>
                 <li>
                   <a
-                    href="https://www.linkedin.com/in/mois-300691/"
+                    href="https://www.instagram.com/mo_iskandar30/?hl=id"
                     target="blank"
-                    ><img src="./assets/image/linkedin.png" alt=""
+                    ><img src="./assets/image/instagram-black.png" alt=""
                   /></a>
                 </li>
                 <li>
                   <a
                     href="https://api.whatsapp.com/send?phone=6281289565274&text=Halo,%20saya%20tertarik%20dengan%20Portofolio%20kamu.%20Salam%20kenal%20ya%20!!"
                     target="blank"
-                    ><img src="./assets/image/wa.png" alt=""
+                    ><img src="./assets/image/wa-black.png" alt=""
                   /></a>
                 </li>
                 <li>
                   <a href="https://t.me/mois30" target="blank"
-                    ><img src="./assets/image/telegram.svg" alt=""
+                    ><img src="./assets/image/telegram-black.png" alt=""
                   /></a>
                 </li>
               </ul>
@@ -118,7 +118,7 @@
             </table>
             <div class="download">
               <a
-                href="https://drive.google.com/open?id=1cua7erRbDjqVQ0nN93sd3Y_7NhluYSQq"
+                href="https://drive.google.com/open?id=1b-XWQjikglRYW1mcRjQEbkMQQwvhPHd_"
               >
                 <button class="button button-download">
                   DOWNLOAD CV
@@ -281,7 +281,7 @@
 
             <tr>
               <td>Dicoding Indonesia</td>
-              <td class="course">SCM for Beginner</td>
+              <td class="course">Source Code Management for Beginner</td>
               <td>Feb 2020</td>
               <td>complete</td>
             </tr>
@@ -384,6 +384,27 @@
                       with Google.
                     </p>
                   </div>
+
+                  <div class="content">
+                    <img src="./assets/image/portofolio.png" alt="" />
+                    <h4>Web Portofolio</h4>
+                    <p>
+                      As a graduation requirement of the Dicoding Academy class
+                      "Learning Basic Web Programming" in the Indosat Ooredoo
+                      Digital Camp (IDCamp) event series. This program is a
+                      collaboration between Indosat Ooredoo and Dicoding.
+                    </p>
+                  </div>
+
+                  <div class="content">
+                    <img src="./assets/image/contact.png" alt="" />
+                    <h4>Contacts Apps</h4>
+                    <p>
+                      Create Simple Mobile Apps using React Native. As a final
+                      exam of the Photon Interactive Training class about "Basic
+                      React Native".
+                    </p>
+                  </div>
                 </div>
               </td>
             </tr>
@@ -393,7 +414,7 @@
     </main>
     <footer>
       <p>
-        &copy; 2019 by Mochamad Iskandar | All right reserved
+        All right reserved | &copy; 2019 by Mochamad Iskandar
       </p>
     </footer>
   </body>
