edit CV, hobby and footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/styles/style.css" />
-    <title>Iskandar's Profile</title>
+    <title>Iskandar Profile</title>
   </head>
 
   <body>
@@ -113,12 +113,12 @@
               </tr>
               <tr>
                 <td class="label">Hobby</td>
-                <td>Futsal</td>
+                <td>Futsal, Reading & Travelling</td>
               </tr>
             </table>
             <div class="download">
               <a
-                href="https://drive.google.com/open?id=1b-XWQjikglRYW1mcRjQEbkMQQwvhPHd_"
+                href="https://drive.google.com/open?id=1hPSWhfWm7pk_6RedHUeYhSoT4OO3t2vV"
               >
                 <button class="button button-download">
                   DOWNLOAD CV
@@ -414,7 +414,7 @@
     </main>
     <footer>
       <p>
-        All right reserved | &copy; 2019 by Mochamad Iskandar
+        &copy; 2019 by Mochamad Iskandar | All right reserved
       </p>
     </footer>
   </body>
