copy from myweb : edit button download, add logo website, edit nav bar, edit all color text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/responsive.css" />
     <title>Iskandar Profile</title>
+    <link rel="shortcut icon" href="assets/image/pro.ico" />
   </head>
 
   <body>
@@ -119,10 +121,9 @@
             <div class="download">
               <a
                 href="https://drive.google.com/open?id=1hPSWhfWm7pk_6RedHUeYhSoT4OO3t2vV"
+                target="_blank"
               >
-                <button class="button button-download">
-                  DOWNLOAD CV
-                </button>
+                <span class="button-download">Download CV</span>
               </a>
             </div>
           </section>
